--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
 name: Release
-
 on:
   push:
     branches:
@@ -15,5 +14,7 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         with:
+          # Esta é a linha crucial que estava faltando:
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           release-type: simple
           package-name: mobile-to-desktop-kit
